snippets/Nemerle.Statechart/Tests/testsuite/positive/composite_at_syntax.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

using System.Collections.Generic;
using System.Linq;

  /// <summary>
  /// Description of junction_example.
  /// </summary>
  [statechart(
  <#
  flags testing;
  name "composite @at syntax";
  
  state A
  {
  }

  state B
  {
    a => C;
    @A:
      {
        a => B;
        b => C;
      }
  }
  
  state C
  {
    a => A;
  }
  #>)]
public class example
{
}

module Test
{
  Main() : void
  {
    def fsm = example();
    def tester = fsm.GetTester();
    tester.ConsoleTestInit();
    tester.Initiate("A", "EntryA");
    tester.Test("a", "B", "ExitA", "EntryB");
    tester.Test("a", "C", "ExitB", "EntryC");
    tester.Test("a", "A", "ExitC", "EntryA");
    tester.Test("b", "C", "ExitA", "EntryC");
    tester.Test("a", "A", "ExitC", "EntryA");
    fsm.Terminate();
  }
}

/*
BEGIN-OUTPUT
EntryA
[A]
Ok
Processing a 'a' 
ExitA
EntryB
[B]
Ok
Processing a 'a' 
ExitB
EntryC
[C]
Ok
Processing a 'a' 
ExitC
EntryA
[A]
Ok
Processing a 'b' 
ExitA
EntryC
[C]
Ok
Processing a 'a' 
ExitC
EntryA
[A]
Ok
END-OUTPUT
*/
