snippets/Nemerle.Statechart/Tests/testsuite/negative/several_else_guards.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

using System.Collections.Generic;
using System.Linq;

  /// <summary>
  /// Description of junction_example.
  /// </summary>
  [statechart(
  <#
  name "several else guards";
  
  state A
  {
    a [else] => B; // E: Several else guards is not permitted: TransitionAToBBya
    a [else] => C; // E: Several else guards is not permitted: TransitionAToCBya
  }

  state B // W: State "B" is not used in fsm life history
  {
  }
  
  state C // W: State "C" is not used in fsm life history
  {
  }
  #>)]
public class example
{
}


